--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="absolute top-6 right-6 z-10">
             <img src="assets/images/logo.png" alt="Logo" class="w-16 h-16 rounded-full">
         </div>
-        <div class="container mx-auto px-6">
+        <div class="container mx-auto px-16 lg:px-24 xl:px-32">
             <div class="grid md:grid-cols-2 gap-12">
                 <!-- First Column -->
                 <div class="space-y-6">
@@ -107,21 +107,23 @@
 
     <!-- Book a Session Section -->
     <section class="booking-section py-20 bg-cover bg-center bg-no-repeat" style="background-image: url('assets/images/booking-bg.jpeg')">
-        <div class="container mx-auto px-6">
+        <div class="container mx-auto px-16 lg:px-24 xl:px-32">
             <div class="flex flex-col items-center justify-center text-center">
                 <div class="max-w-2xl">
-                    <h2 class="text-4xl lg:text-5xl font-bold text-white mb-8">
-                        Agenda tu sesión
-                    </h2>
-                    <button class="booking-button mb-8">Reserva aquí</button>
-                    <div class="space-y-4 text-white">
-                        <div>
-                            <h3 class="font-semibold text-lg">Ubicación</h3>
-                            <p>Online via virtual box, desde casa</p>
-                        </div>
-                        <div>
-                            <h3 class="font-semibold text-lg">Horas</h3>
-                            <p>Flexible, según disponibilidad del profesional</p>
+                        <h2 class="text-4xl lg:text-5xl font-bold text-white mb-6">
+                            Agenda tu sesión
+                        </h2>
+                        <button class="booking-button mb-6">Reserva aquí</button>
+                    <div class="text-box bg-white bg-opacity-20 backdrop-blur-sm p-6 rounded-lg">
+                        <div class="space-y-4 text-white">
+                            <div>
+                                <h3 class="font-semibold text-lg">Ubicación</h3>
+                                <p>Online via virtual box, desde casa</p>
+                            </div>
+                            <div>
+                                <h3 class="font-semibold text-lg">Horas</h3>
+                                <p>Flexible, según disponibilidad del profesional</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -131,7 +133,7 @@
 
     <!-- Patient Testimonials Section -->
     <section class="testimonials-section py-20 bg-cover bg-center bg-no-repeat" style="background-image: url('assets/images/header-bg.png')">
-        <div class="container mx-auto px-6">
+        <div class="container mx-auto px-16 lg:px-24 xl:px-32">
             <h2 class="text-4xl font-bold text-gray-800 text-center mb-16">
                 Lo que dicen nuestras pacientes
             </h2>
@@ -178,7 +180,7 @@
 
     <!-- Join the Team Section -->
     <section class="join-team-section py-20 bg-cover bg-center bg-no-repeat" style="background-color: #80A27F; background-image: url('assets/images/contact-bg.png')">
-        <div class="container mx-auto px-6">
+        <div class="container mx-auto px-16 lg:px-24 xl:px-32">
             <div class="flex flex-col lg:flex-row items-center gap-12">
                 <div class="flex-1">
                     <h2 class="text-4xl lg:text-5xl font-bold text-white mb-8">
@@ -186,31 +188,33 @@
                     </h2>
                 </div>
                 <div class="flex-1 text-white">
-                    <div class="space-y-4">
-                        <div>
-                            <h3 class="font-semibold text-lg">Dirección</h3>
-                            <p>Pucón - Valdivia, Chile</p>
-                        </div>
-                        <div>
-                            <h3 class="font-semibold text-lg">Teléfono</h3>
-                            <p>+569 8784 0539</p>
-                        </div>
-                        <div>
-                            <h3 class="font-semibold text-lg">Correo</h3>
-                            <p>catalinasanjuanm@hotmail.com</p>
-                        </div>
-                        <div>
-                            <h3 class="font-semibold text-lg">Redes sociales</h3>
-                            <div class="flex gap-4 mt-2">
-                                <a href="https://instagram.com/casasalud.cl" target="_blank" class="flex w-8 h-8 bg-white rounded-full items-center justify-center hover:bg-green-100 transition-colors">
-                                    <i class="fa-brands fa-instagram text-green-600"></i>
-                                </a>
-                                <a href="https://facebook.com/casasalud.cl" target="_blank" class="flex w-8 h-8 bg-white rounded-full items-center justify-center hover:bg-green-100 transition-colors">
-                                    <i class="fa-brands fa-facebook text-green-600"></i>
-                                </a>
-                                <a href="https://twitter.com/casasalud.cl" target="_blank" class="flex w-8 h-8 bg-white rounded-full items-center justify-center hover:bg-green-100 transition-colors">
-                                    <i class="fa-brands fa-twitter text-green-600"></i>
-                                </a>
+                    <div class="text-box bg-white bg-opacity-20 backdrop-blur-sm p-6 rounded-lg">
+                        <div class="space-y-4">
+                            <div>
+                                <h3 class="font-semibold text-lg">Dirección</h3>
+                                <p>Pucón - Valdivia, Chile</p>
+                            </div>
+                            <div>
+                                <h3 class="font-semibold text-lg">Teléfono</h3>
+                                <p>+569 8784 0539</p>
+                            </div>
+                            <div>
+                                <h3 class="font-semibold text-lg">Correo</h3>
+                                <p>catalinasanjuanm@hotmail.com</p>
+                            </div>
+                            <div>
+                                <h3 class="font-semibold text-lg">Redes sociales</h3>
+                                <div class="flex gap-4 mt-2">
+                                    <a href="https://instagram.com/casasalud.cl" target="_blank" class="flex w-8 h-8 bg-white rounded-full items-center justify-center hover:bg-green-100 transition-colors">
+                                        <i class="fa-brands fa-instagram text-green-600"></i>
+                                    </a>
+                                    <a href="https://facebook.com/casasalud.cl" target="_blank" class="flex w-8 h-8 bg-white rounded-full items-center justify-center hover:bg-green-100 transition-colors">
+                                        <i class="fa-brands fa-facebook text-green-600"></i>
+                                    </a>
+                                    <a href="https://twitter.com/casasalud.cl" target="_blank" class="flex w-8 h-8 bg-white rounded-full items-center justify-center hover:bg-green-100 transition-colors">
+                                        <i class="fa-brands fa-twitter text-green-600"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -228,7 +232,7 @@
                     <h2 class="text-3xl font-bold text-gray-800 mb-6 text-center">
                         ¡Hola! Soy Catalina San Juan Mondaca
                     </h2>
-                    <div class="text-box bg-white p-8 rounded-lg shadow-lg">
+                    <div class="text-box bg-white bg-opacity-20 backdrop-blur-sm p-8 rounded-lg shadow-lg">
                         <p class="text-lg text-gray-700 mb-4 leading-relaxed">
                             Médica general egresada de la Universidad de la Frontera y residente en Medicina Familiar Comunitaria en la Universidad Austral de Chile.
                         </p>
@@ -249,14 +253,15 @@
 
     <!-- Catalina's Qualifications Section -->
     <section class="qualifications-section py-20 bg-cover bg-center bg-no-repeat" style="background-image: url('assets/images/about-bg\ -\ copia.jpg')">
-        <div class="container mx-auto px-6">
-            <div class="flex flex-col lg:flex-row items-center gap-12">
-                <div class="flex-1">
-                    <div class="qualifications-box bg-white p-8 rounded-lg shadow-lg mb-6">
-                        <h3 class="text-2xl font-bold text-gray-800 mb-6">
+        <div class="container mx-auto px-16 lg:px-24 xl:px-32">
+            <div class="space-y-12">
+                <!-- First row: Two qualification boxes side by side -->
+                <div class="grid md:grid-cols-2 gap-8">
+                    <div class="qualifications-box bg-white bg-opacity-20 backdrop-blur-sm p-8 rounded-lg shadow-lg">
+                        <h3 class="text-2xl font-bold text-white mb-6">
                             Formación que respalda mi práctica
                         </h3>
-                        <ul class="space-y-3 text-gray-700">
+                        <ul class="space-y-3 text-white">
                             <li>• Diplomada en Salud Familiar (U. de Chile)</li>
                             <li>• Diplomada en Geriatría y Gerontología Social (UFRO)</li>
                             <li>• Certificada en Fitoterapia con mención en personas mayores (PUC)</li>
@@ -264,58 +269,59 @@
                             <li>• Iniciación en Reiki Nivel I</li>
                         </ul>
                     </div>
-                    <div class="qualifications-box bg-white p-8 rounded-lg shadow-lg">
-                        <p class="text-lg text-gray-700 leading-relaxed mb-4">
+                    <div class="qualifications-box bg-white bg-opacity-20 backdrop-blur-sm p-8 rounded-lg shadow-lg">
+                        <p class="text-lg text-white leading-relaxed mb-4">
                             Además de mi formación académica, llevo más de 15 años practicando
                             yoga, meditación y otras terapias complementarias que han enriquecido
                             mi mirada sobre la salud, integrando saberes naturales, simbólicos y
                             ancestrales.
                         </p>
-                        <p class="text-lg text-gray-700 leading-relaxed mb-4">
+                        <p class="text-lg text-white leading-relaxed mb-4">
                             Me interesa que cada persona pueda encontrar un espacio donde cuidarse
                             de forma autónoma, con dignidad y en sintonía con su historia 💜
                         </p>
-                        <p class="text-lg text-gray-700 leading-relaxed mb-4">
+                        <p class="text-lg text-white leading-relaxed mb-4">
                             Puedes conocer más de mi mirada en @dra.sanjuan
                         </p>
-                        <p class="text-lg text-gray-700 leading-relaxed mb-4">
+                        <p class="text-lg text-white leading-relaxed mb-4">
                             Nos vemos cuando lo necesites.
                         </p>
-                        <p class="text-lg text-gray-700 leading-relaxed">
+                        <p class="text-lg text-white leading-relaxed">
                             Aquí hay medicina con raíz y con alma.
                         </p>
                     </div>
                 </div>
-                <div class="flex-1">
-                    
-                    <div class="service-offering bg-green-600 text-white p-6 rounded-lg text-center">
+                
+                <!-- Second row: Service offering centered -->
+                <div class="flex justify-center">
+                    <a href="#" class="service-offering backdrop-blur-sm text-white p-6 rounded-lg text-center max-w-md cursor-pointer transition-all duration-300 hover:scale-105 hover:shadow-lg" style="background-color: rgba(128, 162, 127, 0.8);" onmouseover="this.style.backgroundColor='rgba(128, 162, 127, 0.9)'" onmouseout="this.style.backgroundColor='rgba(128, 162, 127, 0.8)'">
                         <h4 class="text-xl font-bold mb-2">Consulta médica integral online</h4>
                         <p class="text-lg">30 minutos - $5.000</p>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Platform Information Section -->
-    <section class="platform-section py-20 bg-no-repeat" style="background-image: url('assets/images/logo.png'); background-size: 384px 384px; background-position: 2rem center;">
-        <div class="container mx-auto px-6">
+    <section class="platform-section py-20 bg-no-repeat" style="background-color: #80A27F; background-image: url('assets/images/logo.png'); background-size: 384px 384px; background-position: 2rem center;">
+        <div class="container mx-auto px-16 lg:px-24 xl:px-32">
             <div class="max-w-4xl mx-auto space-y-6">
-                <div class="text-box bg-white p-6 rounded-lg shadow-lg">
-                    <p class="text-lg text-gray-700 leading-relaxed">
+                <div class="text-box bg-white bg-opacity-20 backdrop-blur-sm p-6 rounded-lg shadow-lg">
+                    <p class="text-lg text-white leading-relaxed">
                         Te invitamos a crear tu propio perfil para agendar y recomendarnos
                         en red. Buscamos a todo tipo de profesional o terapeuta que pueda
                         brindar servicios a distancia, consejería, evaluaciones o terapias.
                     </p>
                 </div>
-                <div class="text-box bg-white p-6 rounded-lg shadow-lg">
-                    <p class="text-lg text-gray-700 leading-relaxed">
+                <div class="text-box bg-white bg-opacity-20 backdrop-blur-sm p-6 rounded-lg shadow-lg">
+                    <p class="text-lg text-white leading-relaxed">
                         Ofrecemos esta plataforma como una solución para agendar, recibir pagos y
                         tramitar boletas, además del servicio de recordatorio, ficha única electrónica con espacios para acuerdos compartidos en el plan terapéutico y marketing digital de los servicios con publicidad en redes sociales y asesoría gráfica.
                     </p>
                 </div>
-                <div class="text-box bg-green-100 p-6 rounded-lg">
-                    <p class="text-lg text-gray-700 leading-relaxed">
+                <div class="text-box bg-white bg-opacity-20 backdrop-blur-sm p-6 rounded-lg">
+                    <p class="text-lg text-white leading-relaxed">
                         Piloto de un mes para profesionales entrevistados por Directorio. Luego comisión 10% del costo de atención.
                     </p>
                 </div>
@@ -324,10 +330,10 @@
     </section>
 
     <!-- Vision and Mission Section -->
-    <section class="vision-mission py-20">
-        <div class="container mx-auto px-6">
+    <section class="vision-mission py-20 bg-cover bg-center bg-no-repeat" style="background-image: url('assets/images/header-bg.png')">
+        <div class="container mx-auto px-16 lg:px-24 xl:px-32">
             <div class="grid md:grid-cols-2 gap-12">
-                <div class="vision-card bg-white p-8 rounded-lg shadow-lg">
+                <div class="vision-card bg-white bg-opacity-20 backdrop-blur-sm p-8 rounded-lg shadow-lg">
                     <div class="logo-center mb-6">
                         <h3 class="text-3xl font-bold text-gray-800">Visión</h3>
                     </div>
@@ -338,7 +344,7 @@
                         <img src="assets/images/logo.png" alt="Logo" class="w-24 h-24 rounded-full">
                     </div>
                 </div>
-                <div class="mission-card bg-white p-8 rounded-lg shadow-lg">
+                <div class="mission-card bg-white bg-opacity-20 backdrop-blur-sm p-8 rounded-lg shadow-lg">
                     <div class="logo-center mb-6">
                         <h3 class="text-3xl font-bold text-gray-800">Misión</h3>
                     </div>
